--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     
     <div id="add_form">
         <input type="text" placeholder="Titel" class="text_field">
-        <input type="text" placeholder="Autor" class="text_field">
+        <input type="text" placeholder="Author" class="text_field">
         <input type="text" placeholder="Pages" class="text_field">
         <label>
             <input type="checkbox" id="check">
             Read
         </label>
-        <button id="add_btn2" onclick="addBook(); clearForm(); hideForm();">Add</button>
+        <button id="add_btn2" onclick="addBook(); ">Add</button>
     </div>
 </body>
 </html>
