--- a/index.html
+++ b/index.html
@@ -28,5 +28,15 @@
         </label>
         <button id="add_btn2" onclick="addBook(); ">Add</button>
     </div>
+
+    <footer>
+        <div class="footer_text">
+            <p>Created by Baloou 2023</p>
+        </div>
+
+
+    </footer>
+
+    
 </body>
 </html>
