--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="head">
         <div class="titel">Your bookshelf</div>
-        <button id="add_btn" onclick="showForm()">+</button>
+        <button id="add_btn">+</button>
     </header>
     <div id="bookshelf" class="shelf"></div>
     
@@ -25,7 +25,7 @@
             <input type="checkbox" id="check">
             Read
         </label>
-        <button id="add_btn2" onclick="addBook();">Add</button>
+        <button id="add_btn2" onclick="addBook();">Add Book</button>
     </div>
 
     <footer>
