--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <header class="head">
         <div class="titel">Your bookshelf</div>
-        <button id="add_btn">+</button>
+        <button id="add_btn" onclick="showForm()">+</button>
     </header>
     <div id="bookshelf" class="shelf"></div>
     
-    <div id="add_form" style="display: none;">
+    <div id="add_form"  style="display: none;">
         <input type="text" placeholder="Titel" class="text_field">
         <input type="text" placeholder="Author" class="text_field">
         <input type="text" placeholder="Pages" class="text_field">
