--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <input type="checkbox" id="check">
             Read
         </label>
-        <button id="add_btn2" onclick="addBook();">Add Book</button>
+        <button id="add_btn2" onclick="addBook();">Add</button>
     </div>
 
     <footer>
